Avoid awkward page breaks in pdf.

--- a/public/css/pdfcss.css
+++ b/public/css/pdfcss.css
@@ -309,3 +309,12 @@ table td,
 table th {
     font-size: 10pt;
 }
+
+table,
+.warning-note,
+.note,
+.important-note,
+pre,
+img {
+    page-break-inside: avoid;
+}
